made a change so I could create the PR

--- a/src/partials/login.html
+++ b/src/partials/login.html
@@ -4,6 +4,6 @@
     <a href="#panel-signup" class="">Sign up</a>
   </nav>
 
-  <div class="tab-content">
+  <div class="tab-contents">
   </div> <!-- END tab-content -->
 </div>
