added in the html for the login tab

--- a/src/partials/login.html
+++ b/src/partials/login.html
@@ -4,6 +4,22 @@
     <a href="#panel-signup" class="">Sign up</a>
   </nav>
 
-  <div class="tab-contents">
+  <div class="tab-content">
+    <section id="pannel-login" class="login">
+      <section class="form-container">
+        <form class="form-login">
+          <fieldset>
+            <label>Username<input type="text" name="username" placeholder="username"/></label>
+            <label>Password<input type="text" name="password" placeholder="********"/></label>
+          </fieldset>
+          <div class="button-login">
+            <button type="submit" class="login-button">Login</button>
+          </div>
+        </form>
+      </section> <!-- END .form-container for login -->
+    </section> <!-- END panel-login -->
+
+    <section id="panel-signup" class="panel">
+    </section>
   </div> <!-- END tab-content -->
 </div>
