--- a/src/partials/login.html
+++ b/src/partials/login.html
@@ -12,14 +12,23 @@
             <label>Username<input type="text" name="username" placeholder="username"/></label>
             <label>Password<input type="text" name="password" placeholder="********"/></label>
           </fieldset>
-          <div class="button-login">
-            <button type="submit" class="login-button">Login</button>
-          </div>
+            <button type="submit" class="button-login">Login</button>
         </form>
       </section> <!-- END .form-container for login -->
     </section> <!-- END panel-login -->
 
     <section id="panel-signup" class="panel">
-    </section>
+      <section class="form-container">
+        <form class="form-signup">
+          <fieldset>
+            <label>Username<input type="text" name="name" placeholder="J. Doe"/></label>
+            <label>Email<input type="text" name="email" placeholder="you@example.com"/></label>
+            <label>Password<input type="text" name="password" placeholder="********"/></label>
+            <label>Confirm Password<input type="text" name="confirm" placeholder="********"/></label>
+          </fieldset>
+            <button type="submit" class="button-signup">Signup</button>
+        </form>
+      </section> <!-- END .form-container for signin -->
+    </section> <!-- END panel-login -->
   </div> <!-- END tab-content -->
 </div>
