basic layout for add-activity form and activity display

--- a/src/partials/activity.html
+++ b/src/partials/activity.html
@@ -2,6 +2,13 @@
   <a href="#/activity"><i class="fa fa-heartbeat fa-fw fa-lg"></i></a>
   <a href="#/add-activity"><i class="fa fa-plus fa-fw fa-lg"></i></a>
 </nav>
+<section class="user-activity">
+  <h3>title</h3>
+  <p class="activity-data">number_of units on date</p>
+  <footer>
+    <button class="add-to">+</button>
+    <button class="edit-activity">edit</button>
+</section>
 <form>
   <fieldset class="activity-title">
     <label for="activity-title">activity:</label>
