add active class to activity tab and panel

--- a/src/partials/activity.html
+++ b/src/partials/activity.html
@@ -1,6 +1,6 @@
 <nav class="activity-tabs">
-  <a href="#/activity"><i class="fa fa-heartbeat fa-fw fa-lg"></i></a>
-  <a href="#/add-activity"><i class="fa fa-plus fa-fw fa-lg"></i></a>
+  <a href="#/activity" class="user-activity-tab active"><i class="fa fa-heartbeat fa-fw fa-lg"></i></a>
+  <a href="#/add-activity" class="add-activity-tab"><i class="fa fa-plus fa-fw fa-lg"></i></a>
 </nav>
 <section class="user-activity">
   <h3>title</h3>
@@ -9,7 +9,7 @@
     <button class="add-to">+</button>
     <button class="edit-activity">edit</button>
 </section>
-<form>
+<form class="add-activity">
   <fieldset class="activity-title">
     <label for="activity-title">activity:</label>
     <input type="text" id="activity-title">
