styling activity tabs

--- a/src/partials/activity.html
+++ b/src/partials/activity.html
@@ -1,8 +1,8 @@
 <nav class="activity-tabs">
-  <a href="#/activity" class="user-activity-tab active"><i class="fa fa-heartbeat fa-fw fa-lg"></i></a>
-  <a href="#/add-activity" class="add-activity-tab"><i class="fa fa-plus fa-fw fa-lg"></i></a>
+  <a href="#/activity" class="user-activity-tab active"><i class="fa fa-heartbeat fa-fw fa-2x"></i></a>
+  <a href="#/add-activity" class="add-activity-tab"><i class="fa fa-plus fa-fw fa-2x"></i></a>
 </nav>
-<section class="user-activity">
+<section class="user-activity active">
   <h3>title</h3>
   <p class="activity-data">number_of units on date</p>
   <footer>
