--- a/src/partials/activity.html
+++ b/src/partials/activity.html
@@ -2,14 +2,15 @@
   <a href="#/activity" class="user-activity-tab active"><i class="fa fa-heartbeat fa-fw fa-2x"></i></a>
   <a href="#/add-activity" class="add-activity-tab"><i class="fa fa-plus fa-fw fa-2x"></i></a>
 </nav>
-<section class="user-activity active">
-  <h3>title</h3>
+<section class="user-activity panel active">
+  <h2>title</h2>
   <p class="activity-data">number_of units on date</p>
   <footer>
     <button class="add-to">+</button>
     <button class="edit-activity">edit</button>
+  </footer>
 </section>
-<form class="add-activity">
+<form class="add-activity panel">
   <fieldset class="activity-title">
     <label for="activity-title">activity:</label>
     <input type="text" id="activity-title">
