--- a/src/scss/_activity.scss
+++ b/src/scss/_activity.scss
@@ -19,4 +19,18 @@
       border-top: 2px solid gray;
     }
   }
+} // END activity-tabs
+
+section.user-activity {
+  margin: 5% 10%;
+  border: 1px solid gray;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 20px;
+
+  footer > button {
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: 10px;
+  }
 }
