--- a/src/partials/activity.html
+++ b/src/partials/activity.html
@@ -11,19 +11,21 @@
   </footer>
 </section>
 <form class="add-activity panel">
+  <h2>add new activity</h2>
   <fieldset class="activity-title">
     <label for="activity-title">activity:</label>
-    <input type="text" id="activity-title">
+    <input type="text" id="activity-title" placeholder="name of activity">
   </fieldset>
   <fieldset class="activity-amount">
     <label for="activity-amount">amount:</label>
-    <input type="number" id="activity-amount">
+    <input type="number" id="activity-amount" placeholder="enter number of laps swam, miles run, ect.">
     <label for="activity-units">select unit:</label>
     <select name="activity-units">
       <option value="miles">miles</option>
       <option value="minutes">minutes</option>
       <option value="reps">reps</option>
       <option value="hours">hours</option>
+      <option value="laps">laps</option>
     </select>
   </fieldset>
   <fieldset class="activity-date">
@@ -31,6 +33,6 @@
     <input type="date" id="activity-date">
   </fieldset>
   <footer>
-    <button type="submit">add activity</button>
+    <button type="submit"><a href="#/activity">add activity</button>
   </footer>
 </form>
