mostly finished with html/css so saving progress

--- a/src/partials/login.html
+++ b/src/partials/login.html
@@ -1,3 +1,4 @@
+<!-- similar tab setup from weekend project with team BlaCaJoJo - shout out to camile's styling code for reference -->
 <div class="main-content-tabs">
   <nav class="tabs">
     <a href="#panel-login" class="active">Log in</a>
@@ -5,7 +6,7 @@
   </nav>
 
   <div class="tab-content">
-    <section id="pannel-login" class="login">
+    <section id="pannel-login" class="pannel">
       <section class="form-container">
         <form class="form-login">
           <fieldset>
