--- a/src/scss/_login.scss
+++ b/src/scss/_login.scss
@@ -1,3 +1,129 @@
-.tab-content {
-  background-color: red;
+// styling for the tab contents
+
+.main-content-tabs {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+}
+.form-container {
+  border: 1px solid #e6e6e6;
+  padding: 5%;
+  margin: 5% auto 2%;
+  min-width: 300px;
+  .form-login {
+    width: 97%;
+    display: block;
+    position: relative;
+    font-size: 10pt;
+    margin: 0 auto;
+    text-align: left;
+    padding-bottom: 5%;
+  }
+  .form-signup {
+    width: 97%;
+    display: block;
+    position: relative;
+    font-size: 10pt;
+    margin: 0 auto;
+    text-align: left;
+    padding-bottom: 5%;
+      label {
+        display: block;
+        padding: 5px 5px 10px 2px;
+        font-weight: bold;
+      }
+      input {
+        font-size: 12px;
+        display: block;
+        width: 100%;
+        height: 28px;
+        border: 1px solid #e6e6e6;
+        font-weight: lighter;
+        padding-left: 1%;
+      }
+  }
+  .form-login {
+    width: 97%;
+    display: block;
+    position: relative;
+    font-size: 10pt;
+    margin: 0 auto;
+    text-align: left;
+    padding-bottom: 5%;
+    label {
+      display: block;
+      padding: 5px 5px 10px 2px;
+      font-weight: bold;
+    }
+    input {
+      font-size: 12px;
+      display: block;
+      width: 100%;
+      height: 28px;
+      border: 1px solid #e6e6e6;
+      font-weight: lighter;
+      padding-left: 1%;
+    }
+  }
+  .button-signup {
+    margin: 0 auto;
+    width: 97%;
+    display: block;
+    position: relative;
+    text-align: center;
+    color: #ffffff;
+    background: #551A8B;
+    border-radius: 3px;
+    padding: 2% 10%;
+    border-color: #551A8B;
+  }
+  .button-login {
+    margin: 0 auto;
+    width: 97%;
+    display: block;
+    position: relative;
+    text-align: center;
+    color: #ffffff;
+    background: #551A8B;
+    border-radius: 3px;
+    padding: 2% 10%;
+    border-color: #551A8B;
+  }
+}
+
+// styling for tabs
+.tabs {
+  border-bottom: 1px solid #e6e6e6;
+  margin-top: 3%;
+  a {
+    text-decoration: none;
+    color: #666;
+    font-size: 9pt;
+    font-family: arial;
+  }
+  a[href] {
+    display: inline-block;
+    position: relative;
+    bottom: -3px;
+    font-size: 10pt;
+    padding: .75% 1%;
+  }
+  &.active {
+    border: 1px solid #ddd;
+    border-bottom: 4px solid #ffffff;
+    border-bottom-color: white;
+    color: #000000;
+    border-top: 2px solid #f69c55;
+  }
+}
+.panel {
+  display: none;
+    &.active {
+      display: inherit;
+      &::after {
+        display: table;
+        content: "";
+        clear: both;
+      }
+    }
 }
