style user activity buttons

--- a/src/scss/_activity.scss
+++ b/src/scss/_activity.scss
@@ -33,6 +33,10 @@ section.activities {
       padding-left: 10px;
       padding-right: 10px;
       margin-right: 10px;
+      background-color: #551A8B;
+      border: solid #551A8B;
+      border-radius: 3px;
+      color: #FFF;
     }
   } // END user-activity panel
 
