getting the css to make the tabs work

--- a/src/partials/login.html
+++ b/src/partials/login.html
@@ -1,12 +1,12 @@
 <!-- similar tab setup from weekend project with team BlaCaJoJo - shout out to camile's styling code for reference -->
 <div class="main-content-tabs">
   <nav class="tabs">
-    <a href="#panel-login" id="login" class="active">Log in</a>
-    <a href="#panel-signup" id="signup" class="">Sign up</a>
+    <a href="#/login" id="login" class="active">Log in</a>
+    <a href="#/signup" id="signup" class="">Sign up</a>
   </nav>
 
   <div class="tab-content">
-    <section id="pannel-login" class="pannel">
+    <section id="panel-login" class="panel active">
       <section class="form-container">
         <form class="form-login" ng-submit="submit()" name="login">
           <fieldset>
