--- a/src/partials/add-activity.html
+++ b/src/partials/add-activity.html
@@ -19,15 +19,9 @@
     </fieldset>
     <fieldset class="activity-amount">
       <label for="activity-amount">amount:</label>
-      <input type="number" id="activity-amount" placeholder="enter number of laps swam, miles run, ect.">
-      <label for="activity-units">select unit:</label>
-      <select name="activity-units">
-        <option value="miles">miles</option>
-        <option value="minutes">minutes</option>
-        <option value="reps">reps</option>
-        <option value="hours">hours</option>
-        <option value="laps">laps</option>
-      </select>
+      <input type="number" id="activity-amount" placeholder="enter number of laps swam, miles run, etc.">
+      <label for="activity-units">unit:</label>
+      <input type="text" id="activity-units" placeholder="miles, minutes, reps, etc.">
     </fieldset>
     <fieldset class="activity-date">
       <label for="activity-date">date of activity:</label>
