--- a/src/partials/activity.html
+++ b/src/partials/activity.html
@@ -3,9 +3,9 @@
     <a href="#/activity" class="user-activity-tab active"><i class="fa fa-heartbeat fa-fw fa-2x"></i></a>
     <a href="#/add-activity" class="add-activity-tab"><i class="fa fa-plus fa-fw fa-2x"></i></a>
   </nav>
-  <section class="user-activity panel active">
-    <h2>title</h2>
-    <p class="activity-data">number_of units on date</p>
+  <section class="user-activity panel active" ng-repeat="activity in activities">
+    <h2>{{activity.title}}</h2>
+    <p class="activity-data">{{activity.number_of}} {{activity.units}} on {{activity.date}}</p>
     <footer>
       <button class="add-to">+</button>
       <button class="edit-activity">edit</button>
