--- a/src/partials/activity.html
+++ b/src/partials/activity.html
@@ -11,7 +11,7 @@
       <button class="edit-activity">edit</button>
     </footer>
   </section>
-  <form class="add-activity panel" id="act" ng-controller="" ng-submit="addAct()">
+  <!-- <form class="add-activity panel" id="act" ng-controller="" ng-submit="addAct()">
     <h2>add new activity</h2>
     <fieldset class="activity-title">
       <label for="activity-title">activity:</label>
@@ -30,5 +30,5 @@
     <footer>
       <button type="submit"><a href="#/activity">add activity</button>
     </footer>
-  </form>
+  </form> -->
 </section>
