--- a/src/partials/chart.html
+++ b/src/partials/chart.html
@@ -1,3 +1,3 @@
-<section class="specific-act" ng-repeat="activity in activities">
+<section class="specific-act" ng-repeat="activity in activities | filter:{'id'}">
   <h2>{{activity.title}}</h2>
 </section>
